kubernetes/neg/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname
spec:
  backend:
    serviceName: hostname
    servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname2
spec:
  backend:
    serviceName: hostname
    servicePort: 90
